[package]
name = "goertzel_algorithm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Akiyuki Okayasu <akiyuki.okayasu@gmail.com>"]
repository = "https://github.com/AkiyukiOkayasu/goertzel_algorithm"
readme = "README.md"
# rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.2.7"

[dev-dependencies]
approx = "0.5.1"