[package]
name = "goertzel_algorithm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Akiyuki Okayasu <akiyuki.okayasu@gmail.com>"]
description = "Goertzel algorithm implementation"
categories = ["no-std", "embedded", "multimedia::audio"]
keywords = ["dsp", "goertzel", "embedded"]
repository = "https://github.com/AkiyukiOkayasu/goertzel_algorithm"
readme = "README.md"
rust-version = "1.60.0"

[dependencies]
libm = "0.2.7"

[dev-dependencies]
approx = "0.5.1"
criterion = {version = "0.5.1", features = ["html_reports"]}  

[[bench]]
name = "benchmark"
harness = false